# avro

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  COPYRIGHT.txt  README.md  get_submodules.sh
src/: CMakeLists.txt
src/api/: avro.cpp  avro.h
src/api/python/: avro.cpp  setup.py
src/examples/: CMakeLists.txt  adapt_custom_geometry.cpp  adapt_parallel.cpp  adapt_serial.cpp  laguerre.cpp
src/examples/SANS/: MesherInterface_avro.cpp  MesherInterface_avro.h  XField_avro.h  XField_avro_2D.cpp  XField_avro_3D.cpp  XField_avro_4D.cpp  XField_avro_impl.h
src/examples/python/: adapt.py  laguerre.py
src/include/: avro.cpp  avro.h  avro_config.h.in  avro_params.cpp  avro_params.h  avro_types.h  parameters.cpp  parameters.h  types.h
src/lib/adaptation/: adapt.cpp  adapt.h  cavity.cpp  cavity.h  collapses.cpp  filter.cpp  filter.h  filter.hpp  geometry.cpp  geometry.h  implied_metric.cpp  implied_metric.h  insertions.cpp  metric.cpp  metric.h  optimise.hpp  parallel.cpp  parallel.h  parameters.cpp  parameters.h  primitive.cpp  primitive.h  properties.cpp  properties.h  smoothing.cpp  swaps.cpp  unitise.hpp
src/lib/common/: array.h  crypto.cpp  crypto.h  data.cpp  data.h  directory.h  error.cpp  error.h  graph.h  info.h  json.h  kdtree.cpp  kdtree.h  mpi.hpp  nearest_neighbours.cpp  nearest_neighbours.h  parallel_for.h  parallel_for.hpp  parameters.h  print.h  process.h  process_cpu.cpp  process_gpu.cpp  process_mpi.cpp  set.h  stringify.h  table.h  thread.h  tools.cpp  tools.h  tree.h  tree.hpp  types.h
src/lib/element/: basis.cpp  basis.h  bernstein_line.cpp  bernstein_pentatope.cpp  bernstein_tetrahedron.cpp  bernstein_triangle.cpp  bezier.cpp  element.cpp  element.h  lagrange.cpp  lagrange_line.cpp  lagrange_nodes.cpp  lagrange_nodes.h  lagrange_pentatope.cpp  lagrange_tetrahedron.cpp  lagrange_triangle.cpp  legendre_line.cpp  legendre_pentatope.cpp  legendre_tetrahedron.cpp  legendre_triangle.cpp  polytope.cpp  polytope.h  quadrature.cpp  quadrature.h  quadrature_cp.h  reference.cpp  reference.h  simplex.cpp  simplex.h  trace2cell.cpp  trace2cell.h  trace2cell.m  transfer.hpp
src/lib/geometrics/: body.cpp  body.h  egads.cpp  egads.h  plc.cpp  plc.h  primitive.cpp  primitive.h  primitive.hpp
src/lib/geometry/: body.cpp  body.h  egads.cpp  egads.h  entity.cpp  entity.h  model.cpp  model.h  plc.cpp  tessellation.cpp  tessellation.h
src/lib/graphics/: application.cpp  application.h  bsp.cpp  bsp.h  camera.cpp  camera.h  client.h  clipping.cpp  clipping.h  colormap.cpp  colormap.h  controls.cpp  controls.h  gl.cpp  gl.h  gui.cpp  gui.h  interface.cpp  interface.h  listener.cpp  listener.h  manager.h  managers.h  math.cpp  math.h  opengl.cpp  plot.cpp  plot.h  plotter.cpp  plotter.h  postscript.cpp  postscript.h  primitive.cpp  primitive.h  primitive_opengl.cpp  primitives.cpp  primitives.h  raytracer.cpp  raytracer.h  scene.cpp  (+20 more)
src/lib/master/: basis.cpp  basis.h  bezier.cpp  lagrange.cpp  master.cpp  master.h  polytope.cpp  polytope.h  quadrature.cpp  quadrature.h  quadrature_cp.h  reference.cpp  reference.h  simplex.cpp  simplex.h  simplex_bezier.cpp  simplex_lagrange.cpp  transfer.hpp
src/lib/mesh/: adapt.h  boundary.cpp  boundary.h  builder.cpp  builder.h  builder.hpp  decomposition.cpp  decomposition.h  dof.cpp  dof.h  facets.cpp  facets.h  field.cpp  field.h  field.hpp  interpolation.cpp  interpolation.h  inverse.cpp  inverse.h  mesh.cpp  mesh.h  mpi.cpp  mpi_tags.h  neighbours.cpp  neighbours.h  partition.cpp  partition.h  points.cpp  points.h  search.cpp  search.h  topology.cpp  topology.h  topology.hpp  topology_polytope.cpp  topology_simplex.cpp  triangulation.cpp  triangulation.h  vertices.cpp  vertices.h
src/lib/numerics/: coordinate.h  determinant.cpp  determinant.h  dual.h  expansion.h  field.cpp  field.h  functions.cpp  functions.h  geometry.cpp  geometry.h  integration.h  integration_rank.h  lapack.h  linear_algebra.cpp  linear_algebra.h  mat.cpp  mat.h  mat.hpp  matd.cpp  matd.h  matrix.h  nlopt_result.h  orient4d_filter.h  predicates.cpp  predicates.h  quaternion.h  result_of.h  sym.cpp  sym.h  symatd.cpp  symatd.h  symd.cpp  symd.h  tools.cpp  tools.h  types.cpp  types.h  vec.cpp  vec.h  (+3 more)
src/lib/physics/: fluid.h  particles.h
src/lib/python/: pyavro.cpp
src/lib/shape/: basis.cpp  basis.h  bezier.cpp  lagrange.cpp  polytope.cpp  polytope.h  quadrature.cpp  reference.cpp  reference.h  shape.cpp  shape.h  simplex.cpp  simplex.h  transfer.hpp
src/lib/simulation/: discretization.cpp  discretization.h  equation_traits.h  equations.h  integrand.h  jacobian.h  pde.h
src/lib/tools/: BackTraceException.cpp  KahanSum.h  PointerArray.h  PointerSequence.h  ProgressBar.h  Ref.h  SANSTraitsInitListAssign.h  SANSTraitsPOD.h  SANSTraitsScalar.h  SANSnumerics.h  Tuple.h  Type2String.h  add_decorator.h  call_derived_functor.h  call_with_derived.h  demangle.cpp  demangle.h  file_extension.h  file_skiplines.h  init_array_copy.h  linspace.h  make_unique.h  minmax.h  noncopyable.h  output_std_vector.h  safe_at.h  split_cat_std_vector.h  split_string.cpp  split_string.h  stringify.h  system_call.cpp  system_call.h  timer.h
src/lib/voronoi/: algorithms.h  bisectors.h  bower_watson.cpp  bowyer_watson.cpp  boywer_watson.cpp  cdt.h  cell.cpp  cell.h  cell_nd.cpp  cell_nd.h  cvt.cpp  cvt.h  delaunay.cpp  delaunay.h  diagram.cpp  diagram.h  facets.cpp  facets.h  geometry.cpp  geometry.h  laguerre.cpp  laguerre.h  mesher.cpp  mesher.h  optimal_transport.cpp  optimal_transport.h  particles.cpp  particles.h  power.cpp  power.h  triangulation.cpp  triangulation.h  vertex.cpp  vertex.h  voronoi.h  voronoi_cell.cpp  voronoi_cell.h  voronoi_diagram.cpp  voronoi_simplex.cpp  voronoi_vertex.cpp
test/: CMakeLists.txt  unit_tester.hpp  ut_common.cpp  ut_driver.cpp
test/api/: custom_geometry_ut.cpp  egg_ut.cpp  parameters_ut.cpp
test/lib/adaptation/: adapt3d_ut.cpp  adapt3ds_ut.cpp  adapt4d_ut.cpp  blossom_ut.cpp  cavity_geometry_ut.cpp  collapse2d_geometry_ut.cpp  collapse3ds_geometry_ut.cpp  (+10 more)
test/regression/: benchmark3d.sh  metric.m
test/tmp/: README
(+602 files in other folders)
